--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
   },
   "dependencies": {
     "preact": "^10.2.1",
+    "react-spring": "8.0.27",
+    "resize-observer-polyfill": "1.5.1",
     "rxjs": "6.6.3",
     "rxjs-hooks": "0.6.2"
   },
